Reorganize repo structure: rename environment_configs to configs, create src/main_study and results/main_study subfolders
- Renamed environment_configs/ to configs/
- Moved main H2 VQE source files to src/main_study/
- Moved H2 VQE results to results/main_study/
- Moved H2Potential.png from deliverables/ to results/main_study/
- Removed futuretests.txt (covered by report)
- Updated PBS scripts with new paths
- Updated README and project_report.tex references

--- a/deliverables/project_report.tex
+++ b/deliverables/project_report.tex
@@ -369,7 +369,7 @@ Figure~\ref{fig:serial_pes} shows the computed potential energy surface.
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.8\textwidth]{../results/vqe_results.png}
+    \includegraphics[width=0.8\textwidth]{../results/main_study/vqe_results.png}
     \caption{H$_2$ potential energy surface computed with serial VQE implementation. The curve shows the characteristic bonding minimum near 0.74 \AA\ and dissociation behavior at large bond lengths.}
     \label{fig:serial_pes}
 \end{figure}
@@ -548,7 +548,7 @@ Figure~\ref{fig:performance} shows comprehensive performance analysis across all
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=\textwidth]{../results/performance_analysis.png}
+    \includegraphics[width=\textwidth]{../results/main_study/performance_analysis.png}
     \caption{Performance analysis: (a) Runtime comparison across implementations, (b) Speedup vs serial baseline, (c) MPI strong scaling with ideal linear scaling reference, (d) Parallel efficiency showing plateau beyond 16 processes.}
     \label{fig:performance}
 \end{figure}
