Fix 30-qubit memory explanation: clarify 64GB + overhead exceeds 80GB VRAM

--- a/deliverables/project_report.tex
+++ b/deliverables/project_report.tex
@@ -533,7 +533,7 @@ For larger qubit counts with multi-GPU: $80.5 \times 3.98 \approx 320\times$ pot
 
     \item \textbf{GPU Scaling}: The CPU vs GPU scaling study (4--26 qubits) shows GPU wins at \textbf{all} scales, with speedup increasing from 10× at 4 qubits to 80× at 26 qubits. This contradicts our initial H$_2$ results where CPU+JIT beat GPU, which we attribute to Hartree-Fock overhead in the molecular simulation.
 
-    \item \textbf{Memory Limits}: Single H100 (80GB) maxes out at 29 qubits. The state vector size grows as $2^N \times 16$ bytes (complex128 amplitudes): at 26 qubits this is 1 GB, at 29 qubits 8 GB. Adjoint differentiation requires $\sim$4$\times$ memory overhead for intermediate states, totaling $\sim$32GB at 29 qubits. While the H100's HBM3 memory (3.35 TB/s bandwidth) can transfer a 1 GB state vector in $\sim$0.3 ms, the repeated matrix-vector multiplications for gradient computation saturate compute resources before memory bandwidth becomes the limiting factor. At 30 qubits, the $\sim$64GB memory requirement exceeds available VRAM.
+    \item \textbf{Memory Limits}: Single H100 (80GB) maxes out at 29 qubits. The state vector size grows as $2^N \times 16$ bytes (complex128 amplitudes): at 26 qubits this is 1 GB, at 29 qubits 8 GB. Adjoint differentiation requires $\sim$4$\times$ memory overhead for intermediate states, totaling $\sim$32GB at 29 qubits. While the H100's HBM3 memory (3.35 TB/s bandwidth) can transfer a 1 GB state vector in $\sim$0.3 ms, the repeated matrix-vector multiplications for gradient computation saturate compute resources before memory bandwidth becomes the limiting factor. At 30 qubits, the theoretical $\sim$64GB requirement, combined with framework overhead and memory fragmentation, exceeds the available 80GB VRAM.
 
     \item \textbf{Near-Perfect Multi-GPU Efficiency}: 99.4\% parallel efficiency across 4 GPUs demonstrates that VQE parameter sweeps are ideal for multi-GPU deployment with essentially zero communication overhead.
 
